overflow problem resolved

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -5,6 +5,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  overflow-x: hidden;
 }
 
 #main {
@@ -34,7 +35,7 @@ body {
 }
 
 img {
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 #image {
